[project]
name = "ironforge-scheduler-service"
version = "0.1.0"
description = "Ironforge auction data collection and recipe seeding scheduler service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "urllib3>=2.0.0",
    "python-dateutil>=2.8.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "basedpyright>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
]
ignore = [
    "E501", # line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

