[project]
name = "ironforge-collection-service"
version = "0.1.0"
description = "A FastAPI service for managing collections in Ironforge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
[tool.ruff]
line-length = 175

[tool.distutils.egg_info]
egg_base = "build"

